correction centrage image voyage et gap

--- a/style.css
+++ b/style.css
@@ -249,9 +249,10 @@ PICTURE VOYAGE
 */
 .picture-voyage {
   padding: 2% 0%;
+  padding-top: 3%;
   display: flex;
   justify-content: center;
-  gap: 3%;
+  gap: 30px;
   flex-wrap: wrap;
 }
 .picture-voyage > img {
@@ -277,7 +278,7 @@ COMMENTAIRE
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1%;
+  padding: 2%;
 }
 /*
 PRICE AND BUY
@@ -300,12 +301,13 @@ PRICE AND BUY
 }
 .buy {
   background-color: #bc6e6e;
-  width: 300px;
-  height: 100px;
+  width: 150px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
+  margin-top: 1.2%;
 }
 .buy:hover {
   cursor: pointer;
